# byraadsarkivet-frontend

./: .gitattributes  .gitignore  Dockerfile  Dockerfile_old  README.md  metadata.json  mypy.ini  pyproject.toml  schema.sql
.github/: dependabot.yml
.github/workflows/: tests.yml
.utils/: adhoc-duplicates.json  adhoc_duplicates.json  adhoc_duplicates_basic.json  adhoc_duplicates_title_based.json  adhoc_duplicates_title_total.json  duplicatetext.py  meeting-tests.py
data/tools/: load_csv_table.py
plugins/: extra_headers.py  extra_urls.py  template_filters.py  template_vars.py
static/: app.js  cookieconsent.css  cookieconsent.min.js  cookiecontrol.js  main.css  main.min.css  siteanalyze_2240844.js  siteanalyze_2240844_full.js  theme.css
temp/: 52210_decisions.json  52210_files.json  52210_metadata.json  52260_metadata.json  59260_decisions.json  59260_files.json  dump_to_strings.py
templates/: base.html  case.html  error.html  index.html  row-db-cases.html  row-db-meetings.html  show_json.html  table-db-cases.html  table-db-meetings.html
templates/components/: case.html
templates/pages/: DEP_cookies.html  about.html  fora.html  politics.html
tests/: locust.conf  locust.py
tools/: compare_tables.py  load_csv_table.py  update_cases_table.py
utils/: add_audio_to_agenda_dict.py  cases-tests.py  compare_tables.py  meeting-tests.py  update_cases_table.py
validation/: cases-tests.py  meeting-tests.py
