[tool.poetry]
name = "byraadsarkivet-frontend"
version = "0.1.0"
description = ""
authors = ["Claus Juhl <cjk@aarhus.dk>"]
maintainers = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://www.aarhusstadsarkiv.dk/"

[tool.poetry.dependencies]
python = "^3.9"
datasette = "^0.57"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.4b1"
flake8 = "^3.9.1"
mypy = "^0.812"

[tool.black]
line-length = 79
exclude = ".venv"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

